<resources>
    <string name="app_name">InventoryAppStage2</string>
    <string name="edit_item">Edit current item</string>
    <string name="missing_field">Edit all fields</string>
    <string name="insert_item_failed">saving failed</string>
    <string name="insert_item_successful">saved</string>
    <string name="unsaved_item">all fields are required. quit editing?</string>
    <string name="discard">discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="delete_msg">do you want to delete this item?</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="delete_failed">delete failed</string>
    <string name="deleted">item has been deleted</string>
    <string name="button_text">BUY</string>
    <string name="unknown">unknown</string>
    <string name="sold">BUY</string>
    <string name="decrease_error">no item in the inventory</string>
    <string name="main_title">Welcome to the Eatery</string>
    <string name="all_fields_required_wanna_quit">all fields are required. Do you want to quit editing?</string>
    <string name="all_fields_required">all fields are required</string>
    <string name="product">product</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="add_items">add items to the inventory\nclick on the floating action button below</string>
    <string name="supplier">supplier</string>
    <string name="supplier_name">supplier name</string>
    <string name="phone_number">phone number</string>
    <string name="contact">Contact Supplier</string>
</resources>
