<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cupcake"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:alpha="0.8"
        android:orientation="horizontal">

        <TextView
            style="@style/EditorTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/value_eight"
            android:text="@string/product"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDarkE" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/value_four">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />


            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_four"
                    android:background="@android:color/holo_orange_dark"
                    android:text="-" />
                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorTheme"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:maxLength="10" />
                <Button
                    android:id="@+id/plus"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@android:color/holo_orange_dark"
                    android:layout_margin="@dimen/value_four"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EditorTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/value_eight"
            android:text="@string/supplier"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDarkE" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/value_four">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_phone_number"
                style="@style/EditorTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10" />

            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/value_eight"
                android:text="@string/contact"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
